--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" defer src="js/status.js"></script>
   <script type="text/javascript" defer src="js/seekbars.js"></script>
-  <script type="text/javascript" defer src="js/app2.js"></script>
+  <script type="text/javascript" defer src="js/app.js"></script>
 
   <script>
     /*var mobile = (navigator.userAgent.search("Mobile") != -1);
